--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,39 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 115200
+board_build.partitions = huge_app.csv
+lib_deps =
+	lvgl/lvgl@^9.2.2
+	bodmer/TFT_eSPI@^2.5.43
+	bblanchon/ArduinoJson@7.4.1
+	https://github.com/PaulStoffregen/XPT2046_Touchscreen.git
+	
+build_flags =
+  -I include
+  -D LV_CONF_INCLUDE_SIMPLE
+  -D USER_SETUP_LOADED=1
+  -D ILI9341_2_DRIVER=1
+  -D TFT_WIDTH=240
+  -D TFT_HEIGHT=320
+  -D TFT_BL=21
+  -D TFT_BACKLIGHT_ON=HIGH
+  -D TFT_MISO=12
+  -D TFT_MOSI=13
+  -D TFT_SCLK=14
+  -D TFT_CS=15
+  -D TFT_DC=2
+  -D TFT_RST=-1
+  -D TOUCH_CS=33
+  -D LOAD_GLCD
+  -D LOAD_FONT2
+  -D LOAD_FONT4
+  -D LOAD_FONT6
+  -D LOAD_FONT7
+  -D LOAD_FONT8
+  -D LOAD_GFXFF
+  -D SMOOTH_FONT
+  -D SPI_FREQUENCY=55000000
+  -D SPI_READ_FREQUENCY=20000000
+  -D SPI_TOUCH_FREQUENCY=2500000
+  -D USE_HSPI_PORT
