--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,7 @@ lib_deps =
 	bodmer/TFT_eSPI@^2.5.43
 	bblanchon/ArduinoJson@7.4.1
 	https://github.com/PaulStoffregen/XPT2046_Touchscreen.git
+	bodmer/JPEGDecoder@^1.8.0
 	
 build_flags =
   -I include
